@@ -128,11 +128,11 @@ Disc(
     FLUX=FLUX_FDS;
     AVERAGING=AVERAGING_ROE;
     AOWENO_TYPE=AOWENO_TYPE_COMPRESSIVE;
-    AOWENO_gammalo=1-1e-1;
-    AOWENO_gammahi=AOWENO_gammalo;
-    INTERPOL=INTERPOL_AOWENO9;
+    AOWENO_gammalo=0.99;
+    AOWENO_gammahi=1-1e-3;
+    INTERPOL=INTERPOL_AOWENO7;
     EIGENVALCOND=EIGENVALCOND_GNOFFO;
-    FACEINTEG=FACEINTEG_CENTRAL3; 
+    FACEINTEG=FACEINTEG_AOWENO5; 
   );
   MUSCLplus(
     FLUX=FLUX_FDSplus;
