@@ -164,7 +164,8 @@ Disc(
     AOWENO_gammalo=0.95;
     AOWENO_gammahi=0.999999;
     INTERPOL=INTERPOL_AOWENO9;
-    EIGENVALCOND=EIGENVALCOND_GNOFFO; 
+    EIGENVALCOND=EIGENVALCOND_GNOFFO;
+    FACEINTEG=FACEINTEG_AOWENO5; 
   );
   FVS(
     AOWENO_TYPE=AOWENO_TYPE_COMPRESSIVE;
